syntax = "proto3";

package calculator;

message SumRequest {
	int32 firstInt = 1;
	int32 secondInt = 2;
}

message SumResponse {
	int32 result = 1;
}

message PrimeDecompositionRequest {
	int32 int = 1;
}

message PrimeDecompositionResponse {
	int32 result = 1;
}

service CalculatorService {
	// Unary
	rpc Sum (SumRequest) returns (SumResponse) {};

	// Server Stream
	rpc Factorise (PrimeDecompositionRequest) returns (stream PrimeDecompositionResponse) {};
}